--- a/src/assets/scss/components/ui/form/BasicInput.scss
+++ b/src/assets/scss/components/ui/form/BasicInput.scss
@@ -14,13 +14,13 @@
     height: #{$line-height-head}em;
 
     &,
-    &--left {
+    &--align-left {
       text-align: left;
     }
-    &--center {
+    &--align-center {
       text-align: center;
     }
-    &--right {
+    &--align-right {
       text-align: right;
     }
 
