--- a/src/assets/scss/components/ui/tab/NavTab.scss
+++ b/src/assets/scss/components/ui/tab/NavTab.scss
@@ -131,6 +131,7 @@
   :global(.is-sticky) & {
     margin-left: 0;
     margin-right: 0;
+    margin-bottom: 0;
     background-color: $color-white;
   }
 }
