--- a/src/assets/scss/components/ui/text/keyValue.scss
+++ b/src/assets/scss/components/ui/text/keyValue.scss
@@ -24,33 +24,37 @@
     margin: 0;
   }
 
-  &--left {
-    .key-value__key {
-      width: 80px;
-    }
-
-    .key-value__value {
-      text-align: left;
-    }
-  }
-
-  &--vertical {
-    .key-value__item {
-      display: block;
-
+  &--align {
+    &-left {
       .key-value__key {
-        margin-right: 0;
-        @include font-size-default(13);
+        width: 80px;
       }
 
       .key-value__value {
-        margin-top: 2px;
         text-align: left;
       }
     }
+  }
 
-    .key-value__item + .key-value__item {
-      margin-top: 24px;
+  &--direction {
+    &-vertical {
+      .key-value__item {
+        display: block;
+
+        .key-value__key {
+          margin-right: 0;
+          @include font-size-default(13);
+        }
+
+        .key-value__value {
+          margin-top: 2px;
+          text-align: left;
+        }
+      }
+
+      .key-value__item + .key-value__item {
+        margin-top: 24px;
+      }
     }
   }
 
