--- a/src/assets/scss/components/ui/common/BasicHr.scss
+++ b/src/assets/scss/components/ui/common/BasicHr.scss
@@ -3,22 +3,26 @@
   height: 10px;
   background-color: $color-gray-15;
 
-  &--contents {
-    margin-left: 0;
-    margin-right: 0;
+  &--type {
+    &-contents {
+      margin-left: 0;
+      margin-right: 0;
+    }
   }
 
-  &--secondary {
-    background-color: $color-gray-20;
-  }
+  &--theme {
+    &-secondary {
+      background-color: $color-gray-20;
+    }
 
-  &--tertiary {
-    height: 1px;
-    background-color: $color-gray-30;
-  }
+    &-tertiary {
+      height: 1px;
+      background-color: $color-gray-30;
+    }
 
-  &--quaternary {
-    height: 1px;
-    background-color: $color-gray-20;
+    &-quaternary {
+      height: 1px;
+      background-color: $color-gray-20;
+    }
   }
 }
