--- a/src/assets/scss/components/ui/layer/FullPopup.scss
+++ b/src/assets/scss/components/ui/layer/FullPopup.scss
@@ -68,6 +68,7 @@
       flex: none;
       display: flex;
       align-items: center;
+      /*
       max-width: 40%;
 
       @include media-mobile-small {
@@ -77,6 +78,7 @@
       @include media-mobile-mini {
         max-width: 24%;
       }
+      */
     }
   }
 
