--- a/src/assets/scss/components/ui/button/ButtonList.scss
+++ b/src/assets/scss/components/ui/button/ButtonList.scss
@@ -31,10 +31,10 @@
     justify-content: center;
   }
 
-  &--full &__list {
+  &--align-full &__list {
     display: block;
   }
-  &--full &__list &__item + &__item {
+  &--align-full &__list &__item + &__item {
     margin-left: 0;
     margin-top: 12px;
   }
