--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -106,6 +106,11 @@ body,
   justify-content: flex-end;
 }
 
+// flex none
+.flex-none {
+  flex: none;
+}
+
 // input-width
 .input-width {
   &-telecom {
