--- a/src/assets/scss/components/ui/tab/UiTab.scss
+++ b/src/assets/scss/components/ui/tab/UiTab.scss
@@ -1,5 +1,9 @@
 .tab {
   display: block;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: stretch;
 
   &__list {
     display: flex;
@@ -19,9 +23,12 @@
 
   &__panel {
     display: none;
+    flex: 1;
+    flex-direction: column;
+    align-items: stretch;
 
     &:global(.is-tab-opened) {
-      display: block;
+      display: flex;
     }
   }
 }
