--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -8,3 +8,4 @@
 @import '@/assets/scss/components/import/product-detail.scss';
 @import '@/assets/scss/components/import/step.scss';
 @import '@/assets/scss/components/import/illustration-img.scss';
+@import '@/assets/scss/components/import/empty.scss';
