--- a/src/assets/scss/components/ui/form/SecurityInput.scss
+++ b/src/assets/scss/components/ui/form/SecurityInput.scss
@@ -39,4 +39,25 @@
       }
     }
   }
+
+  &--password {
+    .security-input__button {
+      justify-content: center;
+      min-height: #{$line-height-button}em;
+    }
+
+    .security-input__dot {
+      width: 18px;
+      height: 18px;
+
+      & + .security-input__dot {
+        margin-left: 16px;
+      }
+
+      &--active {
+        border-color: $color-green-50;
+        background-color: $color-green-50;
+      }
+    }
+  }
 }
