기본 테이블 추가

--- a/src/assets/scss/views/uiGuide/GuideComponent.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponent.scss
@@ -29,4 +29,15 @@
     padding-top: 20px;
     border-top: 2px dashed #ccc;
   }
+
+  &-copy {
+    margin-top: 10px;
+
+    &-code {
+      display: none;
+    }
+    &-button {
+      display: block;
+    }
+  }
 }
