--- a/src/assets/scss/mixins.scss
+++ b/src/assets/scss/mixins.scss
@@ -11,6 +11,12 @@
 }
 
 // reset
+@mixin basic-table {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  border-collapse: collapse;
+}
 @mixin reset-list {
   margin: 0;
   padding: 0;
