--- a/src/assets/scss/components/import/product-detail.scss
+++ b/src/assets/scss/components/import/product-detail.scss
@@ -62,6 +62,8 @@
 
       &__block {
         display: flex;
+        padding: 2px 0;
+        box-sizing: border-box;
       }
 
       &__title {
@@ -73,6 +75,7 @@
       &__desc {
         flex: 1;
         min-width: 0;
+        margin-top: -1px;
         @include font-size-default(14);
       }
     }
