--- a/src/assets/scss/views/personalLoan/PersonalLoanBestCustomer.scss
+++ b/src/assets/scss/views/personalLoan/PersonalLoanBestCustomer.scss
@@ -15,7 +15,7 @@
   margin: 2px 0 0 0;
   @include font-size-default(12);
   color: $color-gray-80;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .sub {
@@ -23,4 +23,12 @@
   @include font-size-default(13);
   color: $color-gray-80;
   font-weight: 300;
+}
+
+.tab__inner {
+  margin-top: 40px;
+}
+
+.margin-top-regular {
+  margin-top: 24px;
 }
