--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -10,3 +10,4 @@
 @import '@/assets/scss/components/import/illustration-img.scss';
 @import '@/assets/scss/components/import/empty.scss';
 @import '@/assets/scss/components/import/basic-table.scss';
+@import '@/assets/scss/components/import/not-table.scss';
