scroll컴포넌트 명칭수정

--- a/src/assets/scss/components/ui/section/ScrollSection.scss
+++ b/src/assets/scss/components/ui/section/ScrollSection.scss
@@ -20,6 +20,11 @@
     overflow-x: scroll;
     width: 100%;
     border-top: 1px solid $color-gray-60;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
     & > div {
       border-top: none;
     }
