- 개인금융 > 스탁론 > 중도상환 조건 입력 팝업
- 개인금융 > 통합한도 조회 > 한도/금리 확인 화면
- 설정, 회원관리 > 간편비밀번호 입력 화면
- 회원가입 > 가입안내, 약관동의
- 고객센터 > 공지사항 리스트, 상세
- 고객센터 > 지점안내 리스트, 상세

--- a/src/assets/scss/components/import/agree-list.scss
+++ b/src/assets/scss/components/import/agree-list.scss
@@ -156,4 +156,27 @@
       height: 14px;
     }
   }
+
+  &__list--tertiary {
+    padding: 4px 0 0 24px;
+
+    .agree-list__item {
+      & + .agree-list__item {
+        margin-top: 2px;
+      }
+    }
+  }
+
+  &__list--flex-box {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 4px 0 0 24px;
+
+    .agree-list__item {
+      padding-right: 8px;
+      & + .agree-list__item {
+        margin: 0;
+      }
+    }
+  }
 }
