--- a/src/assets/scss/components/import/board.scss
+++ b/src/assets/scss/components/import/board.scss
@@ -2,26 +2,38 @@
   &__item {
     padding: 16px 0;
   }
+  &__link {
+    @include reset-button;
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
   &__title {
+    min-width: 0;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+
+    & + .board__text {
+      margin-top: 4px;
+    }
+  }
+  &__title-text {
+    margin: 0;
     @include font-size-default(16);
     color: $color-black;
     font-weight: 500;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: flex;
-    align-items: center;
-
-    & + .board__text {
-      margin-top: 4px;
-    }
   }
   &__sub {
     @include font-size-default(13);
+    flex: none;
     display: flex;
     align-items: center;
-
     font-weight: 300;
+
     &::before {
       content: '';
       display: block;
@@ -45,25 +57,32 @@
 }
 
 .more-button {
+  @include reset-button;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: $color-gray-70;
-  @include font-size-default(13);
-}
+  padding: 3px 0;
 
-.button-icon {
-  display: block;
-  width: 14px;
-  height: 14px;
-  margin-left: 2px;
-  svg {
+  &__text {
+    color: $color-gray-70;
+    @include font-size-default(13);
+    line-height: $line-height-button;
+  }
+
+  &__icon {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 14px;
+    height: 14px;
+    margin-left: 2px;
+    svg {
+      display: block;
+      width: 100%;
+      height: 100%;
 
-    * {
-      fill: $color-gray-70;
+      * {
+        fill: $color-gray-70;
+      }
     }
   }
 }
