--- a/src/assets/scss/components/import/product-detail.scss
+++ b/src/assets/scss/components/import/product-detail.scss
@@ -62,7 +62,7 @@
 
       &__block {
         display: flex;
-        padding: 2px 0;
+        align-items: center;
         box-sizing: border-box;
       }
 
@@ -75,7 +75,6 @@
       &__desc {
         flex: 1;
         min-width: 0;
-        margin-top: -1px;
         @include font-size-default(14);
       }
     }
