--- a/src/assets/scss/views/customer/CustomerNoticeList.scss
+++ b/src/assets/scss/views/customer/CustomerNoticeList.scss
@@ -1,5 +1,6 @@
 @import '@/assets/scss/components/import/empty.scss';
 @import '@/assets/scss/components/import/board.scss';
+@import '@/assets/scss/components/import/more-button.scss';
 
 .margin-top-medium.margin-top-medium {
   margin-top: 40px;
