--- a/src/assets/scss/components/ui/text/keyValue.scss
+++ b/src/assets/scss/components/ui/text/keyValue.scss
@@ -27,7 +27,7 @@
   &--align {
     &-left {
       .key-value__key {
-        width: 80px;
+        width: 34px;
       }
 
       .key-value__value {
@@ -62,6 +62,20 @@
     .key-value__item {
       & + .key-value__item {
         margin-top: 16px;
+      }
+    }
+  }
+
+  &--size {
+    &-regular {
+      .key-value__key {
+        width: 48px;
+      }
+    }
+
+    &-medium {
+      .key-value__key {
+        width: 60px;
       }
     }
   }
