--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -9,3 +9,5 @@
 @import '@/assets/scss/components/import/step.scss';
 @import '@/assets/scss/components/import/illustration-img.scss';
 @import '@/assets/scss/components/import/empty.scss';
+@import '@/assets/scss/components/import/board.scss';
+@import '@/assets/scss/components/import/text-button.scss';
