--- a/src/assets/scss/components/import/not-table.scss
+++ b/src/assets/scss/components/import/not-table.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   width: 100%;
   height: 84px;
+  margin: 0;
   background: $color-gray-05;
   border-radius: 8px;
   color: $color-gray-90;
