공통컴포넌트 반영 작업 완료

--- a/src/assets/scss/views/setting/LayerSettingResetPin.scss
+++ b/src/assets/scss/views/setting/LayerSettingResetPin.scss
@@ -1,4 +1,5 @@
 @import '@/assets/scss/components/import/basic-list.scss';
+@import '@/assets/scss/components/import/notice-section.scss';
 
 .padding-small {
   padding: 0 10px;
