가이드 추가 스위치 버튼

--- a/src/assets/scss/components/ui/form/SwitchCheckBox.scss
+++ b/src/assets/scss/components/ui/form/SwitchCheckBox.scss
@@ -1,4 +1,6 @@
 .switch-checkbox {
+  font-size: 0;
+
   &__label {
     cursor: pointer;
     display: inline-block;
@@ -9,6 +11,9 @@
     border-radius: 50px;
     font-size: 0;
     line-height: 0;
+    outline: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
 
     &::after {
       content: '';
