scss 누락 복구 및 로그인 하단 TextButton 컴포넌트로 수정

--- a/src/assets/scss/views/setting/SettingCertificateExport.scss
+++ b/src/assets/scss/views/setting/SettingCertificateExport.scss
@@ -1,1 +1,8 @@
 @import '@/assets/scss/components/import/input-timer.scss';
+@import '@/assets/scss/components/import/contents-list.scss';
+
+.sub {
+  margin-top: 2px;
+  @include font-size-default(14);
+  color: $color-gray-70;
+}
