--- a/src/assets/scss/components/ui/form/BasicInput.scss
+++ b/src/assets/scss/components/ui/form/BasicInput.scss
@@ -28,6 +28,22 @@
     &[disabled] {
       color: $color-gray-40;
     }
+
+    &::-webkit-input-placeholder {
+      color: $color-gray-60;
+    }
+    &::-moz-placeholder {
+      color: $color-gray-60;
+    }
+    &:-ms-input-placeholder {
+      color: $color-gray-60;
+    }
+    &:-moz-placeholder {
+      color: $color-gray-60;
+    }
+    &::placeholder {
+      color: $color-gray-60;
+    }
   }
 
   &__delete {
