--- a/src/assets/scss/components/ui/form/BasicTextarea.scss
+++ b/src/assets/scss/components/ui/form/BasicTextarea.scss
@@ -13,6 +13,7 @@
   }
 
   &__input {
+    box-sizing: border-box;
     height: 166px;
     border: 1px solid $color-gray-20;
     border-radius: 8px;
