아파트 검색 팝업 작업

--- a/src/assets/scss/components/ui/form/InputBlock.scss
+++ b/src/assets/scss/components/ui/form/InputBlock.scss
@@ -86,9 +86,18 @@
       margin-left: 12px;
     }
 
+    & + &--type-search,
+    &--type-search + & {
+      margin-left: 10px;
+    }
+
     & + &--margin-regular {
       margin-left: 12px;
     }
+  }
+
+  &--type-search {
+    padding-top: 6px;
   }
 
   &--disabled {
