--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -13,3 +13,4 @@
 @import '@/assets/scss/components/import/text-button.scss';
 @import '@/assets/scss/components/import/contents-list.scss';
 @import '@/assets/scss/components/import/notice-section.scss';
+@import '@/assets/scss/components/import/search-list.scss';
