--- a/src/assets/scss/components/import/basic-table.scss
+++ b/src/assets/scss/components/import/basic-table.scss
@@ -26,8 +26,30 @@
       border-left: 1px solid $color-gray-30;
       border-bottom: 1px solid $color-gray-30;
       word-break: break-all;
-      color: #15181f;
+      color: $color-black;
       @include font-size-default(13);
+      vertical-align: middle;
+      text-align: center;
+
+      &:first-child {
+        border-left: none;
+      }
+
+      &.monthly {
+        width: 120px;
+      }
+    }
+  }
+  tfoot {
+    td {
+      padding: 12px 15px;
+      border-left: 1px solid $color-gray-30;
+      border-bottom: 1px solid $color-gray-30;
+      word-break: break-all;
+      background-color: $color-navy-05;
+      color: $color-black;
+      @include font-size-default(13);
+      font-weight: 500;
       vertical-align: middle;
       text-align: center;
 
