--- a/src/assets/scss/components/ui/form/SelectButton.scss
+++ b/src/assets/scss/components/ui/form/SelectButton.scss
@@ -56,4 +56,32 @@
       }
     }
   }
+
+  &--theme-sort {
+    display: inline-block;
+    vertical-align: top;
+    padding-right: 16px;
+    @include font-size-default(12);
+    color: $color-gray-60;
+
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -8px;
+      left: -8px;
+      width: 100%;
+      height: 100%;
+      padding: 8px;
+      background-color: rgba(0, 0, 0, 0);
+    }
+
+    .select-button {
+      &__icon {
+        width: 14px;
+        height: 14px;
+        margin-top: -7px;
+      }
+    }
+  }
 }
