--- a/src/assets/scss/views/customer/CustomerFAQList.scss
+++ b/src/assets/scss/views/customer/CustomerFAQList.scss
@@ -1,6 +1,6 @@
 @import '@/assets/scss/components/import/faq-list.scss';
 @import '@/assets/scss/components/import/empty.scss';
 
-.padding-top-none {
+.no-padding {
   padding-top: 0;
 }
