--- a/src/assets/scss/components/ui/form/SelectButton.scss
+++ b/src/assets/scss/components/ui/form/SelectButton.scss
@@ -1,6 +1,7 @@
 .select-button {
   @include reset-button;
   position: relative;
+  z-index: 0;
   display: block;
   width: 100%;
   padding-right: 20px;
