전화상담신청 작업

--- a/src/assets/scss/components/ui/form/FormList.scss
+++ b/src/assets/scss/components/ui/form/FormList.scss
@@ -2,13 +2,14 @@
   display: block;
 
   &__list {
+    position: relative;
+    z-index: 0;
     margin: 0;
     padding: 0;
   }
 
   &__item {
     position: relative;
-    z-index: 0;
     padding-top: 26px;
 
     & + & {
