--- a/src/assets/scss/views/customer/CustomerFAQList.scss
+++ b/src/assets/scss/views/customer/CustomerFAQList.scss
@@ -4,3 +4,11 @@
 .no-padding {
   padding-top: 0;
 }
+
+.margin-bottom-regular {
+  margin-bottom: 20px;
+}
+
+.margin-bottom-medium {
+  margin-bottom: 24px;
+}
