가이드 툴팁 추가

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -322,3 +322,8 @@ body,
   margin-bottom: 120px;
   @include row-margin-first-last;
 }
+
+.popper {
+  left: 20px !important;
+  right: 20px !important;
+}
