신분증 이미지 반응형관련 css 소스 수정

--- a/src/assets/scss/views/idShoot/LayerIdShootConfirm.scss
+++ b/src/assets/scss/views/idShoot/LayerIdShootConfirm.scss
@@ -1,7 +1,9 @@
 .id-card-image {
   img {
     display: block;
-    height: 158px;
+    max-width: 100%;
+    max-height: 158px;
     margin: 0 auto;
+    height: auto;
   }
 }
