--- a/src/assets/scss/views/idShoot/LayerIdShootDrivingConfirm.scss
+++ b/src/assets/scss/views/idShoot/LayerIdShootDrivingConfirm.scss
@@ -1,7 +1,9 @@
 .id-card-image {
   img {
     display: block;
-    height: 158px;
+    max-width: 100%;
+    max-height: 158px;
     margin: 0 auto;
+    height: auto;
   }
 }
