--- a/src/assets/scss/components/import/switch-list.scss
+++ b/src/assets/scss/components/import/switch-list.scss
@@ -4,7 +4,7 @@
   border-top: 1px solid $color-gray-30;
   padding-top: 24px;
 
-  li {
+  & > li {
     display: flex;
     width: 100%;
     margin-top: 8px;
