--- a/src/assets/scss/views/setting/SettingPush.scss
+++ b/src/assets/scss/views/setting/SettingPush.scss
@@ -1,3 +1,6 @@
+@import '@/assets/scss/components/import/tooltip.scss';
+@import '@/assets/scss/components/import/basic-list.scss';
+
 .setting-push {
   @include reset-list;
 
@@ -17,7 +20,7 @@
     margin: 16px 0 0;
     padding: 0;
 
-    li {
+    & > li {
       display: flex;
       width: 100%;
       margin-top: 8px;
