--- a/src/assets/scss/components/import/board-detail.scss
+++ b/src/assets/scss/components/import/board-detail.scss
@@ -1,27 +1,34 @@
 .board-detail {
+  display: block;
+
   &__head {
     padding-bottom: 30px;
     border-bottom: 1px solid $color-gray-30;
+    margin-bottom: 30px;
   }
+
   &__title {
+    margin: 0;
     @include font-size-head(20);
-    color: $color-black;
     font-weight: 500;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 
     & + .board-detail__sub {
       margin-top: 8px;
     }
   }
+
   &__sub {
+    margin: 0;
     @include font-size-default(13);
     color: $color-gray-70;
     font-weight: 300;
   }
+
   &__contents {
-    padding: 30px 0;
-    @include font-size-default(14);
+    &::before,
+    &::after {
+      content: '';
+      display: table;
+    }
   }
 }
