--- a/src/assets/scss/components/import/board.scss
+++ b/src/assets/scss/components/import/board.scss
@@ -1,13 +1,25 @@
 .board {
-  &__item {
-    padding: 16px 0;
+  display: block;
+
+  &__list {
+    @include reset-list;
   }
+
+  &__item {
+    & + & {
+      margin-top: 32px;
+    }
+  }
+
   &__link {
     @include reset-button;
+    text-decoration: none;
+    color: inherit;
     display: block;
     width: 100%;
     text-align: left;
   }
+
   &__title {
     min-width: 0;
     display: flex;
@@ -18,7 +30,11 @@
       margin-top: 4px;
     }
   }
+
   &__title-text {
+    display: block;
+    flex: 0 1 auto;
+    min-width: 0;
     margin: 0;
     @include font-size-default(16);
     color: $color-black;
@@ -27,12 +43,14 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+
   &__sub {
-    @include font-size-default(13);
     flex: none;
-    display: flex;
-    align-items: center;
+    position: relative;
+    display: block;
+    @include font-size-default(13);
     font-weight: 300;
+    margin-left: 17px;
 
     &::before {
       content: '';
@@ -40,18 +58,20 @@
       width: 1px;
       height: 12px;
       background-color: $color-gray-30;
-      margin: 0 8px;
+      position: absolute;
+      top: 50%;
+      left: -9px;
+      margin-top: -6px;
     }
   }
+
   &__text {
+    display: block;
     @include font-size-default(13);
     color: $color-black;
     font-weight: 300;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-  }
-  &__bottom {
-    padding-bottom: 16px;
   }
 }
