--- a/src/assets/scss/layouts/DefaultHeader.scss
+++ b/src/assets/scss/layouts/DefaultHeader.scss
@@ -37,6 +37,7 @@
     display: flex;
     align-items: center;
     flex: none;
+    /*
     max-width: 40%;
 
     @include media-mobile-small {
@@ -46,6 +47,7 @@
     @include media-mobile-mini {
       max-width: 24%;
     }
+    */
   }
 
   &__title {
