--- a/src/assets/scss/views/lm-blog-personal/LMBlogPersonalMap.scss
+++ b/src/assets/scss/views/lm-blog-personal/LMBlogPersonalMap.scss
@@ -1,7 +1,4 @@
 .map-area {
-  background-color: $color-gray-10;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  flex: 1;
+  min-height: 0;
 }
