--- a/src/assets/scss/views/sign/SignUpApp.scss
+++ b/src/assets/scss/views/sign/SignUpApp.scss
@@ -1,25 +1,3 @@
-.margin-top-small {
-  margin-top: 8px;
-}
-
-.link-arrow {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.link-icon {
-  display: block;
-  width: 14px;
-  height: 14px;
-  margin-left: 2px;
-  svg {
-    display: block;
-    width: 100%;
-    height: 100%;
-
-    * {
-      fill: $color-gray-70;
-    }
-  }
+.illust {
+  padding-bottom: 40px;
 }
