--- a/src/assets/scss/views/customer/CustomerCounselingRegist.scss
+++ b/src/assets/scss/views/customer/CustomerCounselingRegist.scss
@@ -1,1 +1,12 @@
 @import '@/assets/scss/components/import/agree-list.scss';
+
+.customer-counseling {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+
+  &__button {
+    width: 82px;
+  }
+}
